--- a/YelpAnalysis/yelp_analysis.Rmd
+++ b/YelpAnalysis/yelp_analysis.Rmd
@@ -4,6 +4,7 @@ author: "Martin Kovarik"
 date: "`r format(Sys.time(), '%Y-%m-%d')`"
 output: 
   html_document:
+    keep_md: true
     code_folding: hide
 ---
 
